--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  
   <link rel="stylesheet" href="./style.css">
-
 </head>
 <body>
+
 <!-- partial:index.partial.html -->
 <main>
   <ul class='slider'>
@@ -49,21 +48,22 @@
         <button>Read More</button>
       </div>
     </li>
-  
-    
   </ul>
+  
   <nav class='nav'>
     <ion-icon class='btn prev' name="arrow-back-outline"></ion-icon>
     <ion-icon class='btn next' name="arrow-forward-outline"></ion-icon>
   </nav>
 </main>
 
+<!-- Copyright Section -->
+<footer style="text-align: center; padding: 10px; background-color: #f1f1f1; font-size: 14px; color: #333;">
+  Made by <strong>Shreshth Patel</strong> &copy; All rights reserved.
+</footer>
+
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-<!-- partial -->
-  <script  src="./script.js"></script>
-<!-- partial -->
-  <script  src="./script.js"></script>
+<script src="./script.js"></script>
 
 </body>
 </html>
