--- a/index.html
+++ b/index.html
@@ -3,49 +3,60 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="./style.css">
+  <style>
+    /* Footer Styling */
+    footer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 10%;  /* Footer covers only 10% of the screen */
+      background-color: #f1f1f1;
+      color: #333;
+      font-size: 14px;
+      text-align: center;
+      line-height: 10vh;  /* Vertically center the text */
+      box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+      z-index: 10;
+    }
+  </style>
 </head>
 <body>
 
-<!-- partial:index.partial.html -->
 <main>
   <ul class='slider'>
     <li class='item' style="background-image: url('https://iili.io/J5Lmu4V.png')">
       <div class='content'>
         <h2 class='title'>Your Amazing...</h2>
         <p class='description'> I was thinking about you today and couldn't help but smile. Your presence has a way of making everything better.  </p>
-        <button>Read More</button>
       </div>
     </li>
     <li class='item' style="background-image: url('https://iili.io/J5Lm7v1.png')">
       <div class='content'>
         <h2 class='title'>"You are Magical"</h2>
         <p class='description'> "Are you a magician? Because whenever I look at you, everyone else disappears. ✨"</p>
-        <button>Read More</button>
       </div>
     </li>
     <li class='item' style="background-image: url('https://iili.io/J5Lm5YP.png')">
       <div class='content'>
         <h2 class='title'>"You are Always in my mind"</h2>
-        <p class='description'> "You're like a fine wine – you get better with time. 😍  </p>
-        <button>Read More</button>
+        <p class='description'> "You're like a fine wine – you get better with time. 😍" </p>
       </div>
     </li>
     <li class='item' style="background-image: url('https://iili.io/J5LmcTg.png')">
       <div class='content'>
-        <h2 class='title'>"When i Lost I find You.."</h2>
+        <h2 class='title'>"When I Lost I find You.."</h2>
         <p class='description'>
           "Do you have a map? Because I just keep getting lost in your eyes every time I see you. 🌟"
         </p>
-        <button>Read More</button>
       </div>
     </li>
     <li class='item' style="background-image: url('https://iili.io/J5Lmlja.pngg')">
       <div class='content'>
         <h2 class='title'>"You are cute .."</h2>
         <p class='description'>
-         "If you were a cat, you'd purr-fectly steal my heart. 
+         "If you were a cat, you'd purr-fectly steal my heart."
         </p>
-        <button>Read More</button>
       </div>
     </li>
   </ul>
@@ -56,8 +67,8 @@
   </nav>
 </main>
 
-<!-- Copyright Section -->
-<footer style="text-align: center; padding: 10px; background-color: #f1f1f1; font-size: 14px; color: #333;">
+<!-- Footer -->
+<footer>
   Made by <strong>Shreshth Patel</strong> &copy; All rights reserved.
 </footer>
 
