--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 <!-- Footer -->
 <footer>
-  Made by <strong>Shreshth Patrel</strong> &copy; All rights reserved.
+  Made by <strong>Shreshth Patel</strong> &copy; All rights reserved.
 </footer>
 
 <script>
