--- a/index.html
+++ b/index.html
@@ -1,153 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <title>More Than A Carousel</title>
   <link rel="stylesheet" href="./style.css">
-  <style>
-    /* Styling for the slider */
-    main {
-      position: relative;
-      height: 90vh;  /* Take 90% of the viewport height */
-      overflow: hidden;
-    }
 
-    .slider {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      display: flex;
-      transition: transform 0.5s ease-in-out;
-    }
-
-    .item {
-      min-width: 100%;
-      box-sizing: border-box;
-      background-size: cover;
-      background-position: center;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .content {
-      color: #fff;
-      text-align: center;
-      background: rgba(0, 0, 0, 0.6);
-      padding: 30px;
-      border-radius: 10px;
-      max-width: 600px;
-    }
-
-    .title {
-      font-size: 32px;
-      margin: 0 0 15px;
-    }
-
-    .description {
-      font-size: 18px;
-      line-height: 1.5;
-    }
-
-    /* Next button styling */
-    .next-btn {
-      position: absolute;
-      bottom: 12%;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: #ff4081;
-      color: #fff;
-      border: none;
-      padding: 12px 24px;
-      font-size: 18px;
-      cursor: pointer;
-      border-radius: 5px;
-      transition: 0.3s;
-      z-index: 10;
-    }
-
-    .next-btn:hover {
-      background-color: #ff1a64;
-    }
-
-    /* Footer Styling */
-    footer {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 10%;
-      background-color: #f1f1f1;
-      color: #333;
-      font-size: 14px;
-      text-align: center;
-      line-height: 10vh;
-      box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
-      z-index: 5;
-    }
-  </style>
 </head>
-
 <body>
-
+<!-- partial:index.partial.html -->
 <main>
   <ul class='slider'>
     <li class='item' style="background-image: url('./images/img1.png')">
       <div class='content'>
         <h2 class='title'>Your Amazing...</h2>
-        <p class='description'>I was thinking about you today and couldn't help but smile. Your presence has a way of making everything better. ❤️</p>
+        <p class='description'> I was thinking about you today and couldn't help but smile. Your presence has a way of making everything better.  </p>
+        <button>Read More</button>
       </div>
     </li>
-
     <li class='item' style="background-image: url('./images/img2.png')">
       <div class='content'>
         <h2 class='title'>"You are Magical"</h2>
-        <p class='description'>"Are you a magician? Because whenever I look at you, everyone else disappears. ✨"</p>
+        <p class='description'> "Are you a magician? Because whenever I look at you, everyone else disappears. ✨"</p>
+        <button>Read More</button>
       </div>
     </li>
-
     <li class='item' style="background-image: url('./images/img3.png')">
       <div class='content'>
         <h2 class='title'>"You are Always in my mind"</h2>
-        <p class='description'>"You're like a fine wine – you get better with time. 😍"</p>
+        <p class='description'> "You're like a fine wine – you get better with time. 😍  </p>
+        <button>Read More</button>
       </div>
     </li>
-
     <li class='item' style="background-image: url('./images/img4.png')">
       <div class='content'>
-        <h2 class='title'>"When I Lost, I Find You.."</h2>
-        <p class='description'>"Do you have a map? Because I just keep getting lost in your eyes every time I see you. 🌟"</p>
+        <h2 class='title'>"When i Lost I find You.."</h2>
+        <p class='description'>
+          "Do you have a map? Because I just keep getting lost in your eyes every time I see you. 🌟"
+        </p>
+        <button>Read More</button>
       </div>
     </li>
-
     <li class='item' style="background-image: url('./images/img5.png')">
       <div class='content'>
-        <h2 class='title'>"You are Cute .."</h2>
-        <p class='description'>"If you were a cat, you'd purr-fectly steal my heart. 😻"</p>
+        <h2 class='title'>"You are cute .."</h2>
+        <p class='description'>
+         "If you were a cat, you'd purr-fectly steal my heart. 
+        </p>
+        <button>Read More</button>
       </div>
     </li>
+  
+    
   </ul>
-
-  <!-- Next Button -->
-  <button class="next-btn" onclick="nextSlide()">Next</button>
-
+  <nav class='nav'>
+    <ion-icon class='btn prev' name="arrow-back-outline"></ion-icon>
+    <ion-icon class='btn next' name="arrow-forward-outline"></ion-icon>
+  </nav>
 </main>
 
-<!-- Footer -->
-<footer>
-  Made by <strong>Shreshth Patel</strong> &copy; All rights reserved.
-</footer>
-
-<script>
-  let currentIndex = 0;
-
-  function nextSlide() {
-    const slider = document.querySelector('.slider');
-    const items = document.querySelectorAll('.item');
-    currentIndex = (currentIndex + 1) % items.length;
-    slider.style.transform = `translateX(-${currentIndex * 100}%)`;
-  }
-</script>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+<!-- partial -->
+  <script  src="./script.js"></script>
+<!-- partial -->
+  <script  src="./script.js"></script>
 
 </body>
 </html>
