--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
   <title>Love Carasoule</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <style>
+     footer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 10%;
+      background-color: #f1f1f1;
+      color: #333;
+      font-size: 14px;
+      text-align: center;
+      line-height: 10vh;
+      box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+      z-index: 5;
+    }
+  </style>
 
 
 </head>
@@ -65,5 +81,6 @@
 <!-- partial -->
   <script  src="./script.js"></script>
 
+  <footer>  <p>Made by <strong>Shreshth Patel</strong> © All rights reserved.</p></footer>
 </body>
 </html>
