--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       bottom: 0;
       left: 0;
       width: 100%;
-      height: 10%;
-      background-color: #f1f1f1;
-      color: #333;
+      height: 7%;
+      background: rgba(0, 0, 0, 0.5);
+      color: white;
       font-size: 14px;
       text-align: center;
       line-height: 10vh;
